sandc/test/fixtures/astRegression/shouldFail/genericFunctionCall/Extends.sand
pub class Extends {
    foo() {
        bar<T extends String>()
    }
}